--- a/ind.html
+++ b/ind.html
@@ -2,79 +2,124 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My_Project</title>
-    <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="jav2.js">
-    <link rel="icon" href="favicon-32x32.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sacramento&display=swap"
-        rel="stylesheet">
-    <script src="jav2.js"></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My_Project</title>
+  <link rel="stylesheet" href="style2.css">
+  <link rel="icon" href="favicon-32x32.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Montserrat:wght@100..900&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <script src="jav2.js" defer></script>
 </head>
 
 <body>
-    <div class="basic">
-        <div><img class="topcloud" src="cloud.png" alt="cloud-img"></div>
-        <h1> I'm Naitik.</h1>
-        <h2>a programmer.</h2>
-        <img class="bottoncloud" src="cloud.png" alt="cloud-img">
-        <img src="land.svg" alt="cloud-img" width="60%">
+
+<header class="header">
+    <div class="container">
+      <a href="#home" class="logo">Naitik Agrawal</a>
+      <nav class="navbar">
+        <a href="#home" class="navbar-link">Home</a>
+        <a href="#about" class="navbar-link">About</a>
+        <a href="#skills" class="navbar-link">Skills</a>
+        <a href="#projects" class="navbar-link">Project</a>
+        <a href="#contact" class="navbar-link">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="middle-container">
-        <div class="profile">
-            <img class="img_skill0 " src="meii.svg" alt="image">
-            <h2> Hii.</h2>
-            <p>Myself Naitik Agrawal , a student of NIT Jalandhar, pursuing B.Tech in Computer Science and Engineering (CSE), currently in
-                my 4th semester. I am from Jhansi, Uttar Pradesh, and I am passionate about programming and web designing.</p>
 
-        </div>
-        <hr>
-        <br>
-        <div class="skills">
-            <h2>My Skills.</h2>
-            <div class="skill-row">
-                <img class="img_skill1" src="b46cd4a8-7b7d-4652-bb2f-819dfbac0af4.webp" alt="dsa image">
-                <h3>Data Structures and Algorithms</h3>
-                <p>Data Structures and Algorithms form the backbone of efficient problem-solving in computer science.
-                    They help in organizing data, optimizing performance, and solving complex computational problems
-                    through systematic approaches. Mastering them is essential for writing efficient and scalable code.
-                </p>
+  <!-- HOME SECTION -->
+  <section id="home" class="basic">
+    <div><img class="topcloud" src="cloud.png" alt="cloud-img"></div>
+    <h1>I'm Naitik.</h1>
+    <h2>a programmer.</h2>
+    <img class="bottoncloud" src="cloud.png" alt="cloud-img">
+    <img src="land.svg" alt="land-img" width="60%">
+  </section>
 
-            </div>
-            <div class="skill-row">
-                <img class="img_skill2" src="985d630e-a834-4d5b-9e8c-a7b5b5ddd760.webp" alt="webdev image">
-                <h3>Web Development</h3>
-                <p>Web Development involves building and maintaining websites to create interactive, user-friendly, and
-                    visually appealing online experiences. It combines coding, design, and problem-solving skills to
-                    develop responsive websites and web applications for diverse audiences.</p>
-            </div>
-        </div>
-        <hr>
-        <div class="contact-me">
-            <h2>Get In Touch</h2>
-            <h3>I am currently available for freelancing work.</h3>
-<p>I specialize in programming, web development. With a strong background in C++, Python, and front-end technologies, I am open to collaborating on exciting projects. If you need a dedicated and skilled developer, feel free to reach out!</p>
-
-            <br>
-            <br>
-            <a class="btn" href="mailto:agrawalnaitik043@email.com">CONTACT ME</a>
-        </div>
+  <!-- ABOUT SECTION -->
+  <section id="about" class="middle-container">
+    <div class="profile">
+      <img class="img_skill0" src="meii.svg" alt="image">
+      <h2>Hii.</h2>
+      <p>Myself Naitik Agrawal, a student of NIT Jalandhar, pursuing B.Tech in Computer Science and Engineering (CSE),
+        currently in my 4th semester. I am from Jhansi, Uttar Pradesh, and I am passionate about programming and web
+        designing.</p>
     </div>
+    <hr>
+  </section>
 
-<footer class="foot">
+  <!-- SKILLS SECTION -->
+  <section id="skills" class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="img_skill1" src="b46cd4a8-7b7d-4652-bb2f-819dfbac0af4.webp" alt="dsa image">
+      <h3>Data Structures and Algorithms</h3>
+      <p>Data Structures and Algorithms form the backbone of efficient problem-solving in computer science.
+        They help in organizing data, optimizing performance, and solving complex computational problems
+        through systematic approaches. Mastering them is essential for writing efficient and scalable code.
+      </p>
+    </div>
+    <div class="skill-row">
+      <img class="img_skill2" src="985d630e-a834-4d5b-9e8c-a7b5b5ddd760.webp" alt="webdev image">
+      <h3>Web Development</h3>
+      <p>Web Development involves building and maintaining websites to create interactive, user-friendly, and
+        visually appealing online experiences. It combines coding, design, and problem-solving skills to
+        develop responsive websites and web applications for diverse audiences.</p>
+    </div>
+    <hr>
+  </section>
+   <!-- PROJECTS SECTION -->
+<section id="projects" class="projects">
+  <h2>My Projects</h2>
+
+  <div class="project-item">
+    <h3><a href="https://github.com/NaitikAgrawal043/Travel-Website" target="_blank">TripWise</a></h3>
+    <p>A travel planning website designed to help users organize trips, manage itineraries, and explore destinations efficiently.</p>
+  </div>
+
+  <div class="project-item">
+    <h3><a href="https://github.com/NaitikAgrawal043/Portfolio-website" target="_blank">Portfolio Website</a></h3>
+    <p>A personal portfolio website showcasing my skills, experience, and projects, built with HTML, CSS, and JavaScript.</p>
+  </div>
+
+  <div class="project-item">
+    <h3><a href="https://github.com/NaitikAgrawal043/Notes-Takinge" target="_blank">Notes Taking Web App</a></h3>
+    <p>A simple and intuitive task management application that allows users to add, delete, and organize their daily tasks.</p>
+  </div>
+
+  <div class="project-item">
+    <h3><a href="https://github.com/NaitikAgrawal043/Registration-Login-System" target="_blank">Registration Login Systemt</a></h3>
+    <p>An object-oriented programming project that demonstrates strong OOP principles such as encapsulation, inheritance, and polymorphism.</p>
+  </div>
+  
+  <hr>
+</section>
+
+  <!-- CONTACT SECTION -->
+  <section id="contact" class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>I am currently available for freelancing work.</h3>
+    <p>I specialize in programming and web development. With a strong background in C++, Python, and front-end
+      technologies, I am open to collaborating on exciting projects. If you need a dedicated and skilled developer,
+      feel free to reach out!</p>
+    <a class="btn" href="mailto:agrawalnaitik043@email.com">CONTACT ME</a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="foot">
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/naitik-agrawal-9b832128a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" style="color: #545454;">LinkedIn</a>
-        <a class="footer-link" href="https://github.com/NaitikAgrawal043" style="color: #545454;">GitHub</a>
-        <a class="footer-link" href="https://leetcode.com/u/Naitik_Agrawal_/" style="color: #545454;">LeetCode</a>
-        <p class="copyright"> © 2025 Naitik Agrawal.</p>
+      <a class="footer-link"
+        href="https://www.linkedin.com/in/naitik-agrawal-9b832128a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+        style="color: #545454;">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/NaitikAgrawal043" style="color: #545454;">GitHub</a>
+      <a class="footer-link" href="https://leetcode.com/u/Naitik_Agrawal/" style="color: #545454;">LeetCode</a>
+      <p class="copyright">© 2025 Naitik Agrawal.</p>
     </div>
-</footer>
-</body>
+  </footer>
 
+</body>
 </html>
